--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,33 @@
     transform: rotate(360deg);
   }
 }
+
+* {
+  box-sizing: border-box;
+}
+:root {
+  --control: #e69119;
+  --color: #fff;
+}
+button {
+  background: var(--control);
+  color: var(--color);
+  padding: 1rem 2rem;
+  border-radius: 1rem;
+  border: 4px solid var(--color);
+  font-family: 'Fredoka One', cursive;
+  font-size: 1.2rem;
+}
+body {
+  background: linear-gradient(#d1e9fa 0 40%, #86c270 40%);
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Fredoka One', cursive;
+}
+
+h1 {
+  color: Red;
+  font-family: 'Times New Roman', Times, serif;
+}
