--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -24,6 +24,41 @@
     color: #aaa;
   }
   
+  .button {
+    border: 2px solid #d2bdff;
+    height: 80px;
+    width: 200px;
+    border-radius: 4px;
+    position: relative;
+    cursor: pointer;
+    font-family: "Roboto", sans-serif;
+    margin: 25px;
+  }
+  .button::after {
+    content: "HOVER ME";
+    position: absolute;
+    top: 41%;
+    left: 50%;
+    transform: translate(-50%);
+    color: #d2bdff;
+    transition: all 0.1s linear;
+  }
+  .button::before {
+    content: "";
+    position: relative;
+    display: block;
+    height: 15px;
+    width: 15px;
+    background: #d2bdff;
+    box-shadow: 0px 0px 10px 3px #0ff;
+    margin-left: -8px;
+    margin-top: -8px;
+    opacity: 0;
+    transition: all 0.1s linear;
+    border-radius: 100%;
+    animation: star 1.3s linear infinite;
+  }
+  
   .main-card--cointainer {
     display: grid;
     grid-template-columns: repeat(3, minmax(300px, 500px));
