--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,22 @@ body {
 }
 
 h1 {
-  color: Red;
-  font-family: 'Times New Roman', Times, serif;
+  color: blueviolet;
+  font-family:Arial, Helvetica, sans-serif;
+  
+}
+
+.mole-hole {
+  overflow: hidden;
+}
+
+.container{
+  display : flex;
+  align-items:flex-end;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: rgb(88, 11, 11);
+  flex-basis: 100px;
+	flex-grow: 0;
+	flex-shrink: 0;
 }
